tests/positive/basic/clamp_inside/input.ci
void main() { print(toString(clamp(5.0, 0.0, 10.0)) + "\n"); }
