tests/negative/semantic/wrong_arg_count_substr/input.ci
void main() {
    print(toString(substr("a", 0)) + "\n");
}
